force-app/main/default/objects/ForceopolyProperty__mdt/ForceopolyProperty__mdt.object-meta.xml
<CustomObject>
    <label>Forceopoly Property</label>
    <pluralLabel>Forceopoly Properties</pluralLabel>
</CustomObject>