force-app/main/default/objects/ForceopolyProperty__mdt/fields/BuildingCost__c.field-meta.xml
<CustomField>
    <fullName>BuildingCost__c</fullName>
    <label>Building Cost</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>