force-app/main/default/objects/ForceopolyProperty__mdt/fields/PropertyCost__c.field-meta.xml
<CustomField>
    <fullName>PropertyCost__c</fullName>
    <label>Property Cost</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>