force-app/main/default/objects/ForceopolyProperty__mdt/fields/RentHotel__c.field-meta.xml
<CustomField>
    <fullName>RentHotel__c</fullName>
    <label>Rent (Hotel)</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>