force-app/main/default/objects/ForceopolyProperty__mdt/fields/RentHouse1__c.field-meta.xml
<CustomField>
    <fullName>RentHouse1__c</fullName>
    <label>Rent (1 House)</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>