force-app/main/default/objects/ForceopolyProperty__mdt/fields/RentHouse2__c.field-meta.xml
<CustomField>
    <fullName>RentHouse2__c</fullName>
    <label>Rent (2 Houses)</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>