force-app/main/default/objects/ForceopolyProperty__mdt/fields/RentHouse3__c.field-meta.xml
<CustomField>
    <fullName>RentHouse3__c</fullName>
    <label>Rent (3 Houses)</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>